[package]
name = "mtaalink"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono", "time"] }
askama = "0.12"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
axum-server = "0.6"
argon2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator= { version = "0.16", features = ["derive"] }
jsonwebtoken = "9.0"
chrono = "0.4"
tower-http = { version = "0.5", features = [ "trace"] }
uuid = { version = "1", features = ["v4"] }
