[package]
name = "mtaalink"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = { version = "0.7", features = ["json", "macros", "multipart", "ws"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono", "time", "bigdecimal", "migrate"] }
askama = "0.12"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
axum-server = "0.6"
argon2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator= { version = "0.16", features = ["derive"] }
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
axum-params = "0.4"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors", "trace","full"] }
tower = "0.4"
tokio-util = "0.7"
bigdecimal = { version = "0.3.1", features = ["serde"] }
bytes = "1"
tower_governor = { version = "0.4", features = ["axum"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
futures-util = "0.3"